--- a/about.html
+++ b/about.html
@@ -23,7 +23,8 @@
          </div>
            <div class="nav-items">
                <li><a href="index.html">HOME</a> </li>
-               <li><a href="about.html">ABOUT US</a> </li>
+               <li><a href="about.html">ABOUT</a> </li>
+               <li><a href="signin.html">LOG IN</a> </li>
                <li><a href="index.html#contactpage">CONTACT</a> </li>
            </div>
        </ul>
@@ -67,9 +68,10 @@
               <div class="footer-center">
                 <h3>Quick Links</h3>
                 <ul>
-                  <li><a href="index.html">Home</a></li>
-                  <li><a href="about.html">About Us</a></li>
-                  <li><a href="index.html#contactpage">Contact</a></li>
+                  <li><a href="index.html">HOME</a></li>
+                  <li><a href="about.html">ABOUT</a></li>
+                  <li><a href="signin.html">LOG IN</a> </li>
+                  <li><a href="index.html#contactpage">CONTACT US</a></li>
                 </ul>
               </div>
               <div class="footer-right">
