--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About us page</title>
+    <title>About us | House of Wisdom</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
@@ -25,7 +25,7 @@
                <li><a href="index.html">HOME</a> </li>
                <li><a href="about.html">ABOUT</a> </li>
                <li><a href="signin.html">LOG IN</a> </li>
-               <li><a href="index.html#contactpage">CONTACT</a> </li>
+               <li><a href="about.html#contact-us">CONTACT</a> </li>
            </div>
        </ul>
 
@@ -58,7 +58,7 @@
 
 
 
-        <footer class="footer">
+        <footer class="footer" id="contact-us">
             <div class="footer-container">
               <div class="footer-left">
                 <h3>About Us</h3>
@@ -71,11 +71,11 @@
                   <li><a href="index.html">HOME</a></li>
                   <li><a href="about.html">ABOUT</a></li>
                   <li><a href="signin.html">LOG IN</a> </li>
-                  <li><a href="index.html#contactpage">CONTACT US</a></li>
+                  <li><a href="about.html#contact-us">CONTACT US</a></li>
                 </ul>
               </div>
               <div class="footer-right">
-                <h3>Contact</h3>
+                <h3 >Contact</h3>
                 <ul>
                   <li>Email: <a href="mailto:example@example.com">example@example.com</a></li>
                   <li>Phone: +254-743-380-615</li>
