--- a/signup.html
+++ b/signup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About us page</title>
+    <title>Sign Up | House of Wisdom</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
@@ -25,7 +25,7 @@
                <li><a href="index.html">HOME</a> </li>
                <li><a href="about.html">ABOUT</a> </li>
                <li><a href="signin.html">LOG IN</a> </li>
-               <li><a href="index.html#contactpage">CONTACT</a> </li>
+               <li><a href="signup.html#contact-us">CONTACT</a> </li>
            </div>
        </ul>
 
@@ -56,7 +56,7 @@
                     <input type="password" placeholder="Password" required>
                     <button type="submit">Sign In</button>
                 </form>
-                <p>Don't have an account? <span onclick="toggleForm()"><a href="signin.html#sign-up-form">Sign Up</a></span></p>
+                <p>Don't have an account? <span onclick="toggleForm()"><a href="signin.html">Sign Up</a></span></p>
             </div>
         </div>
         </section>
@@ -64,7 +64,7 @@
 
 
 
-        <footer class="footer">
+        <footer class="footer" id="contact-us">
             <div class="footer-container">
               <div class="footer-left">
                 <h3>About Us</h3>
@@ -77,7 +77,7 @@
                   <li><a href="index.html">HOME</a></li>
                   <li><a href="about.html">ABOUT</a></li>
                   <li><a href="signin.html">LOG IN</a> </li>
-                  <li><a href="index.html#contactpage">CONTACT US</a></li>
+                  <li><a href="signup.html#contact-us">CONTACT US</a></li>
                 </ul>
               </div>
               <div class="footer-right">
